[package]
name = "comments"
version = "0.1.0"
edition = "2021"
authors = ["Hanyuan Li <work@hanyuone.live>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8.4", features = [
    "json",
    "query",
], default-features = false }
axum-extra = { version = "0.10.1", features = ["cookie"] }
console_error_panic_hook = { version = "0.1.7" }
futures-util = "0.3.31"
http = "1.3.1"
serde = "1.0.219"
time = { version = "0.3.43", features = ["wasm-bindgen"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower-service = "0.3.3"
uuid = { version = "1.18.1", features = ["v7", "rng-rand"] }
wasm-bindgen-futures = "0.4.51"
wasm-streams = "0.4.2"
web-sys = "0.3.77"
worker = { version = "0.6", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.6" }
# Patched `rand` version to ^0.9
oauth2 = { path = "../oauth2-rs", default-features = false }
# Added as dependency to ensure that feature is used transitively
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }

[patch.crates-io]
# Patched `getrandom` version to ^0.3
ring = { path = "../ring" }
